[gd_scene load_steps=19 format=2]

[ext_resource path="res://graphics/helicopter.png" type="Texture" id=1]
[ext_resource path="res://code/objects/Portal.gd" type="Script" id=2]
[ext_resource path="res://sounds/helicopter.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/no-entry.ogg" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 288, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 288, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 288, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 864, 0, 288, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 288, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 1440, 0, 288, 96 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 1728, 0, 288, 96 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 2016, 0, 288, 96 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "helicopter",
"speed": 10.0
} ]

[sub_resource type="Animation" id=10]
resource_name = "lift_off"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 5 ),
"transitions": PoolRealArray( 1, 1.62451, 0.225313 ),
"update": 0,
"values": [ 0.0, 2.0, 10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 5 ),
"transitions": PoolRealArray( 1, 3.5, -26.1664 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 1920, -900 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 15.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "spin_up"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:speed_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HelicopterSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 0 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HelicopterSound:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -6.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 40, 24 )

[sub_resource type="Animation" id=13]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TransitionLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TransitionLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Portal" type="Area2D"]
monitorable = false
collision_layer = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Helicopter" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "helicopter"
speed_scale = 0.0
playing = true

[node name="HelicopterAnimation" type="AnimationPlayer" parent="Helicopter"]
anims/lift_off = SubResource( 10 )
anims/spin_up = SubResource( 11 )

[node name="HelicopterSound" type="AudioStreamPlayer" parent="Helicopter"]
stream = ExtResource( 3 )
volume_db = -6.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 50, 15 )
shape = SubResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="TransitionLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="ColorRect" type="ColorRect" parent="TransitionLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionAnimation" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/fade_out = SubResource( 13 )
anims/start = SubResource( 14 )

[node name="NoEntry" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
